--- a/templates/Kinda_Cloudy/base.html
+++ b/templates/Kinda_Cloudy/base.html
@@ -20,33 +20,34 @@
 <div class = "cuerpo">
     <div class="content">
         <div id="banner">
+            <div class="login">
+                <div id="register">
+                    {% csrf_token %} {% if user.is_authenticated %}
+                    <p class="user"><b>Usuario: {{ user.username }}</b>
+                        <form class="logout" method="post" action="/logout">
+                            <input type="submit" value="Logout">
+                        </form>
+                        {% else %}
+                        <form class="login" method="post" action="/login">
+                            <table>
+                                <tr>
+                                    <td><label for="username"><b>Usuario:</b></label>
+                                        <td><input value="{{ form.id }}" name="username"><br>
+                                </tr>
+                                <tr>
+                                    <td><label for="password"><b>Contraseña:</b></label>
+                                        <td><input value="{{ form.password }}" name="password" type="password"><br>
+                                            <td><input class="boton" type="submit" value="Login">
+                                </tr>
+                            </table>
+                        </form>
+                        {% endif %}
+                </div>
+            </div>
         </div>
     </div>
 
-    <div class="login">
-        <div id="register">
-            {% csrf_token %} {% if user.is_authenticated %}
-            <p class="user">Usuario: {{ user.username }}
-                <form class="logout" method="post" action="/logout">
-                    <input type="submit" value="Logout">
-                </form>
-                {% else %}
-                <form class="login" method="post" action="/login">
-                    <table>
-                        <tr>
-                            <td><label for="username">Usuario: </label>
-                                <td><input value="{{ form.id }}" name="username"><br>
-                        </tr>
-                        <tr>
-                            <td><label for="password">Contraseña: </label>
-                                <td><input value="{{ form.password }}" name="password" type="password"><br>
-                                    <td><input class="boton" type="submit" value="Login">
-                        </tr>
-                    </table>
-                </form>
-                {% endif %}
-        </div>
-    </div>
+
     {% block menu %}
     <div id="nav">
         <ul>
