--- a/templates/Kinda_Cloudy/default.css
+++ b/templates/Kinda_Cloudy/default.css
@@ -9,9 +9,9 @@ body, html {
 /* banner image, you may change this just by inputting a different file name. */
 
 #banner {
-    background: url('banner.jpg')top center no-repeat;
+    background: url('banner.jpg')left no-repeat;
     padding: 70px;
-    margin: 0;
+    margin: 20;
     border-bottom: 3px solid #ccc;
     color: #fff;
 }
