--- a/templates/Kinda_Cloudy/base.html
+++ b/templates/Kinda_Cloudy/base.html
@@ -7,6 +7,7 @@
     <title>Museos</title>
     <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1" />
     <link rel="stylesheet" type="text/css" href="/templates/Kinda_Cloudy/default.css" />
+    <link rel="shortcut icon" href="{% static 'Kinda_Cloudy/favicon.ico' %}" type="image/png"/>
     <style>
         .cuerpo{
             background: {{color}};
