Insertado elemento HTML5 (video de la funcionalidad obligatoria) y corregidos errores

--- a/templates/Kinda_Cloudy/index.html
+++ b/templates/Kinda_Cloudy/index.html
@@ -8,6 +8,7 @@
         <div class="letra">
             <h3>Páginas personales:</h3>
             <p>{{paginas_personales|safe}}</p>
+            <p><a href='http://localhost:8000/videos'>Vídeos</a>
         </div>
     </div>
 </div>
