--- a/templates/Kinda_Cloudy/videos.html
+++ b/templates/Kinda_Cloudy/videos.html
@@ -12,12 +12,26 @@
         <a href="/about">About</a>
     </ul>
 </div>
+<style>
+    .oculto{
+        display: none;
+    }
+</style>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 {% endblock %}
+
 {% block main %}
 <div class="main">
     <div class="letra">
         <h2>Vídeo parte obligatoria</h2>
     </div>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/7Z-qfCwQpQE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-</div>
+    <button id="boton">Vídeo</button>
+    <div id="video" class="oculto">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/7Z-qfCwQpQE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
+    <script>
+        $("#boton").click(function() {
+            $("#video").toggleClass("oculto")
+        });
+    </script>
 {% endblock %}
