--- a/templates/Kinda_Cloudy/index.html
+++ b/templates/Kinda_Cloudy/index.html
@@ -9,6 +9,9 @@
             <h3>Páginas personales:</h3>
             <p>{{paginas_personales|safe}}</p>
             <p><a href='http://localhost:8000/videos'>Vídeos</a>
+            <p><a href='http://localhost:8000/xml'>Canal XML</a>
+            <p><a href='http://localhost:8000/json'>Canal JSON</a>
+            <p><a href='http://localhost:8000/rss'>Canal Comentarios RSS</a>
         </div>
     </div>
 </div>
